# repricing-forensics

./: .env.example  .gitignore  HANDOFF.md  README.md  acd_briefing.html  breakage_forensics.html  index.html  pyproject.toml
.github/workflows/: analysis.yml
docs/: analysis_plan.md  presentation_deck_outline.md  presentation_idea.md  presentation_outline.md
notebooks/: 03_call_graph_analysis.ipynb  04_project_attribution.ipynb  helpers.py
scripts/: build_briefing.py  build_call_graph_analysis.py  build_contract_labels.py  build_duckdb.py  build_html_reports.py  build_outreach_report.py  build_project_reports.py  build_status_call_frames.py  enrich_contracts.py  export_parquet.py  generate_figures.py  label_status_failure_pairs.py  materialize_reports.py  serve.py
src/eip7904_analysis/: __init__.py  config.py  duckdb_utils.py  parsers.py  pipeline.py  sql.py
src/eip7904_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/repricing_forensics/: config.py  labels.py  pipeline.py  sourcify.py  sql.py
src/repricing_forensics/web/: app.py  db.py  routes_api.py  routes_pages.py
src/repricing_forensics/web/static/: app.js  style.css
src/repricing_forensics/web/templates/: about.html  affected.html  base.html  briefing.html  contract.html  forensics.html  landing.html  tx.html
