[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eip7904-analysis"
version = "0.1.0"
description = "Analysis workflow for Ethereum EIP-7904 repricing divergence data"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "plotly>=5.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
